--- a/assets/style.css
+++ b/assets/style.css
@@ -7,19 +7,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     background: #222;
     background-image: url(./images/WallpaperDog-20494010.jpg);
+    font-size: 120%;
 }
-
-/* .navbar {
-    background-color: #2C4251;
-}
-
-.navbar-brand.h1 {
-    color: #FF784F;
-}
-
-.navbar-brand {
-    color: white;
-} */
 
 .card {
     background: #000000d0;
@@ -29,38 +18,69 @@ body {
     width: 100%;
     max-width: 420px;
     margin: 1em;
-}
-
-.search {
+  }
+  
+  .search {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-button {
+  }
+  
+  button {
     margin: 0.5em;
     border-radius: 50%;
     border: none;
-    height: 46px;
-    width: 46px;
+    height: 44px;
+    width: 44px;
     outline: none;
     background: #7c7c7c2b;
     color: white;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-}
-
-input.search-bar {
-    outline: none;
+  }
+  
+  input.search-bar {
     border: none;
-    padding: 0.5em 1em;
+    outline: none;
+    padding: 0.4em 1em;
     border-radius: 24px;
     background: #7c7c7c2b;
     color: white;
     font-family: inherit;
-    font-size: 120%;
-}
-
-button:hover {
+    font-size: 105%;
+    width: calc(100% - 100px);
+  }
+  
+  button:hover {
     background: #7c7c7c6b;
-}
+  }
+  
+  h1.temp {
+    margin: 0;
+    margin-bottom: 0.4em;
+  }
+  
+  .flex {
+    display: flex;
+    align-items: center;
+  }
+  
+  .description {
+    text-transform: capitalize;
+    margin-left: 8px;
+  }
+  
+  .weather.loading {
+    visibility: hidden;
+    max-height: 20px;
+    position: relative;
+  }
+  
+  .weather.loading:after {
+    visibility: visible;
+    content: "Loading...";
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 20px;
+  }
